--- a/app/globals.css
+++ b/app/globals.css
@@ -29,4 +29,12 @@
   .section-container {
     @apply max-w-5xl mx-auto px-8 sm:px-4;
   }
+
+  .section-heading {
+    @apply text-center text-3xl md:text-5xl md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text;
+  }
+
+  .section-subheading {
+    @apply text-center text-[22px] leading-[30px] tracking-tight;
+  }
 }
